--- a/public/styles.css
+++ b/public/styles.css
@@ -97,3 +97,32 @@ footer {
   font-size: 0.9rem;
   color: #666;
 }
+
+.virtual-browser {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  z-index: 1000;
+}
+
+.address-bar {
+  display: flex;
+  padding: 10px;
+  background-color: #f1f1f1;
+  border-bottom: 1px solid #ccc;
+}
+
+#address-input {
+  flex: 1;
+  padding: 5px;
+  font-size: 16px;
+}
+
+#browser-frame {
+  width: 100%;
+  height: calc(100% - 50px);
+  border: none;
+}
