--- a/public/styles.css
+++ b/public/styles.css
@@ -84,3 +84,11 @@ button:hover {
   overflow: auto;
   background-color: #fff;
 }
+
+#loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5em;
+  color: #444;
+}
