--- a/public/styles.css
+++ b/public/styles.css
@@ -24,6 +24,7 @@ body {
   text-align: right;
   border-radius: 5px;
   margin-bottom: 10px;
+  word-wrap: break-word;
 }
 
 #buttons {
@@ -86,9 +87,50 @@ button:hover {
 }
 
 #loading {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
-  font-size: 1.5em;
-  color: #444;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 1000;
 }
+
+@keyframes ldio-x2uulkbinc {
+  0% { transform: translate(-50%, -50%) rotate(0deg); }
+  100% { transform: translate(-50%, -50%) rotate(360deg); }
+}
+
+.ldio-x2uulkbinc div {
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  border: 20px solid #000000;
+  border-top-color: transparent;
+  border-radius: 50%;
+  animation: ldio-x2uulkbinc 1s linear infinite;
+  top: 100px;
+  left: 100px;
+}
+
+.loadingio-spinner-rolling-nq4q5u6dq7r {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  overflow: hidden;
+  background: transparent;
+}
+
+.ldio-x2uulkbinc {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  transform-origin: 0 0;
+}
+
+.ldio-x2uulkbinc div { box-sizing: content-box; }
