--- a/public/styles.css
+++ b/public/styles.css
@@ -8,6 +8,12 @@ body {
   margin: 0;
 }
 
+#container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
 #calculator {
   background-color: #fff;
   padding: 20px;
@@ -52,7 +58,7 @@ button:hover {
   width: 100%;
   height: 100vh;
   background-color: #fff;
-  display: flex;
+  display: none; /* 初期状態は非表示 */
   flex-direction: column;
 }
 
@@ -60,6 +66,7 @@ button:hover {
   display: flex;
   padding: 10px;
   background-color: #444;
+  z-index: 1000; /* 他のコンテンツより前面に表示 */
 }
 
 #browser-controls button {
